Use AngularJS ng-cloak to stop initial page load flicker.

--- a/app/styles/theme.css
+++ b/app/styles/theme.css
@@ -23,3 +23,7 @@ body {
     margin-top:100px;
     z-index: 1000;
 }
+
+[ng-cloak] {
+    display: none !important;
+}
